# hls-streaming

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml  ruff.toml  settings.toml
hls/: README.md
prometheus/: prometheus.yml
src/: config.py  logger.py  main.py  metrics.py  streaming.py  streaming_manager.py  utils.py
static/js/: player.js
static/styles/: player.css
templates/: index.html
videos/: README.md
