[project]
name = "video-streaming"
version = "0.1.0"
description = "An inifintely looped conversion of video files to the HLS format via ffmpeg so it can be consumed in a stream-like manner "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "pydantic-settings>=2.7.0",
    "ruff>=0.8.4",
    "uvicorn>=0.34.0",
]
