[project]
name = "video-streaming"
version = "0.1.0"
description = "An inifintely looped conversion of video files to the HLS format via ffmpeg so it can be consumed in a stream-like manner "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.6",
    "fastapi>=0.115.6",
    "jinja2>=3.1.4",
    "ruff>=0.8.4",
    "uvicorn>=0.34.0",
]
